package ejercicio1;

//Interfaz para definir los métodos comunes a todas las mesas
public interface Mesa {
    double calcularPrecioReserva(); //Método para calcular el precio de la reserva
    String mostrar(); //Método para mostrar la información de la mesa
}
